Initial refactoring to use Foundation SASS files, start modularizing NetBeans SASS and build to single CSS file. (#3)
Superb job by Neil. Thanks!

--- a/netbeans.apache.org/src/content/participate/index.asciidoc
+++ b/netbeans.apache.org/src/content/participate/index.asciidoc
@@ -21,7 +21,7 @@ See link:submit-pr.html[contributing code] to learn how to contribute code to th
 == link:report-issue.html[Reporting issues]
 See link:report-issue.html[reporting issues] for instructions on how to report an issue.
 
-== Join the link:netcat.html[NetCAT] program
+== link:netcat.html[Join the NetCAT program]
 The NetBeans Community Acceptance Test (link:netcat.html[NetCAT]) has helped stabilize development
 builds for years.
 
