--- a/netbeans.apache.org/src/content/community/index.asciidoc
+++ b/netbeans.apache.org/src/content/community/index.asciidoc
@@ -1,3 +1,21 @@
+////
+     Licensed to the Apache Software Foundation (ASF) under one
+     or more contributor license agreements.  See the NOTICE file
+     distributed with this work for additional information
+     regarding copyright ownership.  The ASF licenses this file
+     to you under the Apache License, Version 2.0 (the
+     "License"); you may not use this file except in compliance
+     with the License.  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing,
+     software distributed under the License is distributed on an
+     "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+     KIND, either express or implied.  See the License for the
+     specific language governing permissions and limitations
+     under the License.
+////
 = Community
 :jbake-type: page
 :jbake-tags: community
@@ -8,13 +26,13 @@
 :toc-title:
 
 == link:mailing-lists.html[Keep Informed]
-The Apache NetBeans Community communicates in many different ways. See how to keep informed and in touch with other NetBeans users and developers.
+The Apache NetBeans Community link:mailing-lists.html[communicates in many different ways]. See how to keep informed and in touch with other NetBeans users and developers.
 
 == link:/participate/index.html[Participate]
-We welcome all kind of contributions. And there are many ways to contribute: see how you can participate in Apache NetBeans.
+We welcome link:/participate/index.html[all kind of contributions]. And there are many ways to contribute: see how you can participate in Apache NetBeans.
 
 == link:events.html[NetBeans Events]
-NetBeans users and developers participate in different events. See how this works.
+NetBeans users and developers participate in link:events.html[different events]. See how this works.
 
 == link:who.html[Who We Are]
 The Apache NetBeans source code was donated by Oracle to the link:https://www.apache.org[Apache Software Foundation] in 2016.
