Multisite test licenses (#5)
* Added licenses and a simple card component for the main page.

* Arranged some minor broken links. Centering of cards.

* Complying with Apache specific download page guidelines

- The download page for Apache projects has to link to sources,
binaries, ASC, MD5 and SHA1 files.
- Release specific page.
- Some other minor improvements to CSS
- Some broken links
- Some minor visual enhancements.

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -1,17 +1,41 @@
+////
+     Licensed to the Apache Software Foundation (ASF) under one
+     or more contributor license agreements.  See the NOTICE file
+     distributed with this work for additional information
+     regarding copyright ownership.  The ASF licenses this file
+     to you under the Apache License, Version 2.0 (the
+     "License"); you may not use this file except in compliance
+     with the License.  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing,
+     software distributed under the License is distributed on an
+     "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+     KIND, either express or implied.  See the License for the
+     specific language governing permissions and limitations
+     under the License.
+////
+////
+
+NOTE: 
+See https://www.apache.org/dev/release-download-pages.html 
+for important requirements for download pages for Apache projects.
+
+////
 = Downloads / Apache NetBeans
 :jbake-type: page
-:jbake-tags: community
+:jbake-tags: download
 :jbake-status: published
 :keywords: Apache NetBeans download
 :description: Apache NetBeans Download page
 :toc: left
 :toc-title:
 
-== Apache NetBeans 9.0 Beta
+[[releases]]
+== Releases
 
-You can download the latest release, link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0-beta/[Apache NetBeans 9.0 Beta] from the Apache Mirror System.
-
-For the this beta release we are not providing platform-specific installers. See link:https://blogs.apache.org/netbeans/date/20180216[our blog] for more information about this release.
+- link:nb90-beta.html[Apache NetBeans 9.0 Beta], released on the 22nd of February, 2018.
 
 [[latest]]
 == Latest Builds
