Adding the "feature" component, to add images and features to the release page. (#6)
- Features can be easily added in asciidoc documents, with floating images (and links to enlarged versions).
- Example page for some of the NetBeans 9.0 features.

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -35,7 +35,10 @@ for important requirements for download pages for Apache projects.
 [[releases]]
 == Releases
 
-- link:nb90-beta.html[Apache NetBeans 9.0 Beta], released on the 22nd of February, 2018.
+=== Apache NetBeans 9.0
+
+- link:nb90/[Apache NetBeans 9.0 Features]
+- link:nb90/nb90-beta.html[Apache NetBeans 9.0 Beta], released on the 22nd of February, 2018.
 
 [[latest]]
 == Latest Builds
