--- a/netbeans.apache.org/src/content/download/nb90/nb90-beta.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90-beta.asciidoc
@@ -38,11 +38,7 @@ Apache NetBeans (incubating) 9.0 Beta was announced on the 22nd of february, 201
 
 === Main features
 
-This release is *primarily focused on IP clearance*. Its functionality has not been tested — the link:/participate/netcat.html[NetCAT (NetBeans Community Acceptance Testing)] process will begin during the coming months. Watch link:/participate/netcat.html[the NetCAT page] for upcoming announcements about NetCAT. When NetCAT completes, we will vote on the final release of Apache NetBeans (incubating) 9.0.
-
-This release constitutes all the modules in the link:https://github.com/apache/incubator-netbeans[Apache NetBeans Git] repo, which together provide the NetBeans Platform (i.e., the underlying application framework), which was released as Apache NetBeans (incubating) 9.0 Alpha, as well as all the modules that provide the Java SE-related features of Apache NetBeans, with special support for Java 9 features such as *JShell*, *JLink*, *Jigsaw* and more.
-
-In short, Apache NetBeans (incubating) 9.0 Beta is a *full IDE for Java SE 9* development.
+See link:/download/nb90/index.html[Apache NetBeans 9.0 Features] for a full list of features.
 
 === Downloading
 
