Apache and Oracle trademark notices, link to incubator status, arranged some broken links, removed wiki JCA pages, added another backround, added ASF resources for events. (#7)
* Adding the "feature" component, to add images and features to the release page.

- Features can be easily added in asciidoc documents, with floating images (and links to enlarged versions).
- Example page for some of the NetBeans 9.0 features.

* ASF and Oracle Trademarks, Incubator Status, Another background, wiki "asciidoc" content types, removed some JCA wiki pages, broken links

--- a/netbeans.apache.org/src/content/community/events.asciidoc
+++ b/netbeans.apache.org/src/content/community/events.asciidoc
@@ -40,5 +40,20 @@ guidelines] before announcing or promoting these events.
 We are still working out those requirements, this page will then list
 events of interest for the NetBeans Community.
 
+=== Apache Software Foundation resources
+
+The Apache Software Foundation provides different resources for events and conferences:
+
+- link:https://www.apache.org/foundation/marks/events[Apache Event Branding Policy Overview].
+- link:http://community.apache.org/speakers/slides.html[Apache related slides], see also more link:http://community.apache.org/speakers/index.html[Speaker Support Materials] 
+and link:https://community.apache.org/speakers/[Speaker information], including an Apache press kit.
+- The link:https://www.youtube.com/user/TheApacheFoundation/[ASF YouTube Channel] can be used to upload videos.
+- You can list yourself as a link:http://community.apache.org/speakers/speakers.html[potential speaker].
+- link:http://community.apache.org/calendars/conferences.html[Events calendar].
+- link:https://www.apache.org/events/meetups.html[Upcoming Apache-Related meetups].
+
+Be sure to also check the Apache Software Foundation link:http://community.apache.org/[Apache Community Development] page.
+
+
 
 
