--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -62,6 +62,16 @@ Once you're all set just enter the `incubator-netbeans` directory and type:
 
 Now that you have built Apache NetBeans from source you may want to link:/participate/submit-pr.html[submit a pull request].
 
+[[repos]]
+=== Repositories
+
+This is a list of Apache NetBeans (incubating) repositories:
+
+- https://github.com/apache/incubator-netbeans The main source code repository.
+- https://github.com/apache/incubator-netbeans-website This website's repository.
+- https://github.com/apache/incubator-netbeans-website-cleanup A repository used to clean up existing documentation from http://netbeans.org
+- Emilian Bold has converted the previous Mercurial repository (http://hg.netbeans.org) to git, for historical reference, and has kindly uploaded it to github at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
+
 [[previous]]
 == Previous NetBeans versions
 
