--- a/netbeans.apache.org/src/content/participate/index.asciidoc
+++ b/netbeans.apache.org/src/content/participate/index.asciidoc
@@ -47,4 +47,8 @@ builds for years.
 == Improving the documentation
 We will be porting existing NetBeans documentation soon. Keep posted for information on how to help with this task.
 
+[[asf]]
+== ASF Sponsorthip Program 
+You may also want to consider doing a donation to the link:https://www.apache.org/foundation/sponsorship.html[Apache Sponsorship Program],
+or link:https://www.apache.org/foundation/buy_stuff.html[buying some ASF swag].
 
