Larger images (60%) in medium and up, reorganized features page.

--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -88,7 +88,10 @@ NetBeans 9 supports link:http://openjdk.java.net/projects/jigsaw/spec/[JPMS (Jig
 Modulepath was added as a crucial paradigm to NetBeans in addition to Classpath.
 
 The standard NetBeans Java SE Project Type (Ant based) can be a single JDK9 module simply by adding a `module-info.java` file into the default package.
+--
 
+[.feature]
+--
 image:nb90-module-info-completion.png[Autocompletion in module-info.java, title="Autocompletion in module-info.java", role="right", link="nb90-module-info-completion.png"]
 
 Of course, we provide full autocompletion for `module-info.java`
@@ -111,29 +114,36 @@ in the project will be compiled at once.
 ==== Java Shell support
 [.feature]
 --
+image:nb90-javashell.png[Java Shell Support, title="Java Shell Support", role="left", link="nb90-javashell.png"]
+
 Java Shell is a new tool included in JDK9 defined in link:http://openjdk.java.net/jeps/222[JEP 222] to introduce REPL
 (read-eval-print-loop) capabilities to Java. 
-
-image:nb90-javashell.png[Java Shell Support, title="Java Shell Support", role="left", link="nb90-javashell.png"]
 
 NetBeans provides integrated console-like UI for the Java Shell, leveraing NetBeans editor capabilites.
 
 NetBeans can support the tool with the user project configuration, so the Java
 Shell is set up to work with project classes and libraries, providing autocompletion out of the box in
 the editor.
+--
 
+[.feature]
+--
 image:nb90-shell-agent.png[Shell Agent Configuration, title="JShell acess configuration", role="right", link="nb90-shell-agent.png"]
 
 Also NetBeans greatly extends the capabilities of the commandline tool.
 NetBeans can execute the shell *as an agent*, similar to a debugging agent, on the
 debugged or run application (currently only J2SE applications are supported,
 both Ant and Maven-based).
+--
 
+[.feature]
+--
 image:nb90-shell-save.png[Saving JShell snippets, title="Saving JShell snippets", role="left", link="nb90-shell-save.png"]
 
 Snippets written in JShell can be redefined and tested, even against a running
-code. When the prototype is ready, it can be saved to a regular java source file
-and integrated with the project.
+code. 
 
+When the prototype is ready, it can be saved to a regular java source file
+and integrated with the project.
 --
 
