--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -143,7 +143,7 @@ image:nb90-shell-save.png[Saving JShell snippets, title="Saving JShell snippets"
 Snippets written in JShell can be redefined and tested, even against a running
 code. 
 
-When the prototype is ready, it can be saved to a regular java source file
+When the prototype is ready, it can be saved to a regular Java source file
 and integrated with the project.
 --
 
