--- a/netbeans.apache.org/src/content/participate/index.asciidoc
+++ b/netbeans.apache.org/src/content/participate/index.asciidoc
@@ -27,7 +27,7 @@
 :toc-title: 
 
 The Apache Software Foundation has set up link:http://community.apache.org/[a
-specific website] designed to help newcomers take their first steps towards
+specific website] designed to help newcomers take their first steps toward
 being part of our Community. 
 
 You can participate in the Apache NetBeans (Incubating) Project in many different ways.
@@ -40,15 +40,17 @@ See link:submit-pr.html[contributing code] to learn how to contribute code to th
 See link:report-issue.html[reporting issues] for instructions on how to report an issue.
 
 == link:netcat.html[Join the NetCAT program]
-The NetBeans Community Acceptance Test (link:netcat.html[NetCAT]) has helped stabilize development
+The NetBeans Community Acceptance Testing program (link:netcat.html[NetCAT]) has helped stabilize development
 builds for years.
 
 [[documentation]]
 == Improving the documentation
-We will be porting existing NetBeans documentation soon. Keep posted for information on how to help with this task.
+We will be porting existing NetBeans documentation soon. Consider joining the
+link:/community/mailing-lists.html[dev mailing list] for updates on how to help with this task.
 
 [[asf]]
-== ASF Sponsorthip Program 
-You may also want to consider doing a donation to the link:https://www.apache.org/foundation/sponsorship.html[Apache Sponsorship Program],
-or link:https://www.apache.org/foundation/buy_stuff.html[buying some ASF swag].
+== Contributing to the ASF
+You may also want to consider link:http://www.apache.org/foundation/contributing.html[donating to the
+Apache Software Foundation], joining the link:https://www.apache.org/foundation/sponsorship.html[ASF
+Sponsorship Program], or link:https://www.apache.org/foundation/buy_stuff.html[buying ASF merchandise].
 
