--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -317,6 +317,8 @@ Committer
   - Java, Plugins, NetCAT 
 
 === John McDonnell
+Committer
+
   - BearingPoint Ireland, Dublin, Ireland 
   - Maven, Java EE, Docker 
 
