--- a/netbeans.apache.org/src/content/community/events.asciidoc
+++ b/netbeans.apache.org/src/content/community/events.asciidoc
@@ -27,23 +27,22 @@
 
 == Apache NetBeans Events
 
-Apache NetBeans Days are a class of events which happen regularly, with a clear definition of what makes an event be part of that class:
+An "Apache NetBeans Day" is a class of event that happens regularly, with a clear definition of what makes an event be part of that class:
 
 1. Have its opening keynote focus on the current state and roadmap of NetBeans. 
 2. Have all demos done throughout the event in NetBeans.
-3. Must be discussed/notified via the Apache NetBeans dev mailing list.
+3. Must be approved, via a lazy vote thread, on the Apache NetBeans dev mailing list.
 
-Note: From an Apache point of view what's important (besides trademarks being respected) is that all organizations are treated fairly and that it's clear that they cannot "own" the event or project. We need to make sure we don't favor commercial entities or organizations over others is a strong requirement of the ASF's 501c(3) status, so we're very picky about that. And besides this legal requirement, it's what makes the ASF a unique place where companies which might compete in the market can collaborate in a fair way, due to our very neutral status.
+*Note:* From an Apache point of view what's important (besides trademarks being respected) is that all organizations are treated fairly and that it's clear that they cannot "own" the event or project. We need to make sure we don't favor commercial entities or organizations over others is a strong requirement of the ASF's 501c(3) status, so we're very picky about that. And besides this legal requirement, it's what makes the ASF a unique place where companies which might compete in the market can collaborate in a fair way, due to our very neutral status.
 
-For publicizing NetBeans events, the Apache News posts at https://blogs.apache.org/foundation/ could mention those events, best is to contact press@apache.org for that. Apache has an Event Listing (https://events.apache.org/), that we'd also like to make use of.
+For publicizing NetBeans events, the Apache News posts at https://blogs.apache.org/foundation/ can mention those events, best is to contact press@apache.org for that. Apache has an Event Listing (https://events.apache.org/), that we'd also like to make use of.
 
 === Upcoming Apache NetBeans Days
 
 Apache NetBeans Day UK 2018::
 To be held at the University of Greenwich campus (London) on April the 27th, 2018. See the link:https://www.eventbrite.co.uk/e/apache-netbeans-day-uk-2018-tickets-43401128945[agenda and details] and the dedicated link:https://twitter.com/NetBeansDayUK[Twitter account].
 
-
-=== Apache Software Foundation resources
+=== Apache Software Foundation Resources
 
 The Apache Software Foundation provides different resources for events and conferences:
 
