--- a/netbeans.apache.org/src/content/community/index.asciidoc
+++ b/netbeans.apache.org/src/content/community/index.asciidoc
@@ -25,8 +25,8 @@
 :toc: left
 :toc-title:
 
-== link:mailing-lists.html[Keep Informed]
-The Apache NetBeans Community link:mailing-lists.html[communicates in many different ways]. See how to keep informed and in touch with other NetBeans users and developers.
+== link:mailing-lists.html[Stay Informed]
+The Apache NetBeans Community link:mailing-lists.html[communicates in many different ways]. See how to stay informed and in touch with other NetBeans users and developers.
 
 == link:/participate/index.html[Participate]
 We welcome link:/participate/index.html[all kind of contributions]. And there are many ways to contribute: see how you can participate in Apache NetBeans.
