--- a/netbeans.apache.org/src/content/participate/report-issue.asciidoc
+++ b/netbeans.apache.org/src/content/participate/report-issue.asciidoc
@@ -27,6 +27,8 @@
 
 == Reporting Issues
 
+If you have found a bug in the application, please help Apache NetBeans by reporting this problem to our bug tracking system. Click View Data button, copy the exception and submit it together with detailed information about what you were trying to achieve before the problem occurred in JIRA. Thank you for helping us make Apache NetBeans better!
+
 We use the link:https://issues.apache.org/jira/projects/NETBEANS/summary[JIRA] issue tracker to track issues.
 
 To report an issue please:
