--- a/netbeans.apache.org/src/content/participate/report-issue.asciidoc
+++ b/netbeans.apache.org/src/content/participate/report-issue.asciidoc
@@ -27,11 +27,7 @@
 
 == Reporting Issues
 
-If you have found a bug in the application, please help Apache NetBeans by reporting this problem to our bug tracking system. Click View Data button, copy the exception and submit it together with detailed information about what you were trying to achieve before the problem occurred in JIRA. Thank you for helping us make Apache NetBeans better!
+If you have found a bug in the application, please help Apache NetBeans by reporting this problem to our bug tracking system. Click View Data button, copy the exception and submit it together with detailed information about what you were trying to achieve before the problem occurred in link:https://issues.apache.org/jira/projects/NETBEANS/summary[JIRA]. 
 
-We use the link:https://issues.apache.org/jira/projects/NETBEANS/summary[JIRA] issue tracker to track issues.
+Thank you for helping us make Apache NetBeans better!
 
-To report an issue please:
-
-. Search JIRA to see if the issue has been already reported by any other user.
-. If not then please link:https://issues.apache.org/jira/secure/CreateIssue!default.jspa[Create an issue] specifying the affected component.
