Use an HTTPS URL

--- a/netbeans.apache.org/src/content/participate/index.asciidoc
+++ b/netbeans.apache.org/src/content/participate/index.asciidoc
@@ -50,7 +50,7 @@ link:/community/mailing-lists.html[dev mailing list] for updates on how to help 
 
 [[asf]]
 == Contributing to the ASF
-You may also want to consider link:http://www.apache.org/foundation/contributing.html[donating to the
+You may also want to consider link:https://www.apache.org/foundation/contributing.html[donating to the
 Apache Software Foundation], joining the link:https://www.apache.org/foundation/sponsorship.html[ASF
 Sponsorship Program], or link:https://www.apache.org/foundation/buy_stuff.html[buying ASF merchandise].
 
