--- a/netbeans.apache.org/src/content/community/committer.asciidoc
+++ b/netbeans.apache.org/src/content/community/committer.asciidoc
@@ -16,7 +16,7 @@
      specific language governing permissions and limitations
      under the License.
 ////
-= How to become a commiter
+= How to become a committer
 :jbake-type: page
 :jbake-tags: community
 :jbake-status: published
@@ -26,14 +26,14 @@
 :toc-title:
 
 
-== How to become a commiter (and maybe a PPMC member)
+== How to become a committer (and maybe a PPMC member)
 
 The Committer, Member and (P)PMC Member terms, in particular, have very specific meanings in the Apache Software Foundation
 (see also link:https://www.apache.org/foundation/how-it-works.html[how the ASF works]), and need to be used appropriately to avoid confusion:
 
 . Everyone who is listed link:https://wiki.apache.org/incubator/NetBeansProposal[at the Apache NetBeans Proposal] can become an Apache NetBeans committer and PPMC (Podling Project Management Committee) member by submitting the required paperwork. 
 For those in that list, the final step in becoming a committer is to send your iCLA (link:https://www.apache.org/licenses/icla.pdf[individual contributor license agreement (pdf)]) to Apache. 
-Under "preferred Apache id(s)", please put an ID of your choice, which does not already exist (check link:http://people.apache.org/commiter-index.html[here].
+Under "preferred Apache id(s)", please put an ID of your choice, which does not already exist (check link:http://people.apache.org/committer-index.html[here].
 Please print out the iCLA, complete it and sign it, scan it, and then e-mail the PDF file to link:mailto:secretary@apache.org[secretary@apache.org]. 
 Once you have sent in your iCLA, you will receive a notification and your Apache ID. You will then be ready to commit code to Apache NetBeans, once the code has been transferred from Oracle. 
 NetBeans PPMC members should also join link:mailto:private@netbeans.incubator.apache.org[private@netbeans.incubator.apache.org] (by sending a 
