--- a/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
@@ -36,7 +36,7 @@ We follow link:https://www.apache.org/foundation/policies/conduct.html[the Apach
 
 We appreciate new contributors to adhere to the following guidelines, to make things easier for all of us:
 
-. Before starting to code, it is a good practice to open an issue (PTR) first in our link:https://issues.apache.org/jira/projects/NETBEANS/summary[JIRA] instance, and discuss the problem in the developer mailing list (see link:mailing-lists.html[mailing lists]), giving the reason for submitting your pull request so that it is clear and more experienced members can suggest appropriate solutions/ideas.  
+. Before starting to code, it is a good practice to open an issue (PTR) first in our link:https://issues.apache.org/jira/projects/NETBEANS/summary[JIRA] instance, and discuss the problem in the developer mailing list (see link:/community/mailing-lists.html[mailing lists]), giving the reason for submitting your pull request so that it is clear and more experienced members can suggest appropriate solutions/ideas.  
 . All commits must include the author's full name and email address. For *important modifications* you will need to submit an link:https://www.apache.org/licenses/icla.pdf[Individual Contributor License Agreement (ICLA)].
 . All new files must include the Apache Software Foundation license header. See any NetBeans source code in case of doubt.
 . All commits must contain a meaningful commit message.
@@ -108,7 +108,7 @@ Once your code is ready to review create a *pull request* using the github inter
 
 Once your pull request is submitted to Apache NetBeans it will be visible in this address https://github.com/apache/incubator-netbeans/pulls.
 
-The pull request will then be reviewed by the link:team.html[NetBeans Team], once there's time to do so. Please be patient, as this may take some time, depending on other duties and ongoing work.
+The pull request will then be reviewed by the link:/community/who.html[NetBeans Team], once there's time to do so. Please be patient, as this may take some time, depending on other duties and ongoing work.
 
 [[squash]]
 === Squashing commits on a Pull Request
