--- a/netbeans.apache.org/src/content/community/committer.asciidoc
+++ b/netbeans.apache.org/src/content/community/committer.asciidoc
@@ -46,7 +46,7 @@ As usual at the ASF, everything happens in the open unless really really require
 . Being a NetBeans committer or PPMC member does *not* make you an Apache Software Foundation (ASF) Member - that's a different status that's granted by existing Members 
 to people who show an interest in and add value to the Foundation as a whole, see link:https://www.apache.org/foundation/how-it-works.html#roles[https://www.apache.org/foundation/how-it-works.html#roles].
 
-== For (P)PMC members: Commiter / (P)PMC member election process
+== For (P)PMC members: Committer / (P)PMC member election process
 
 The process is similar to other Apache projects, such as link:https://github.com/apache/cordova-new-committer-and-pmc[Apache Cordova]:
 
