Add a caption to the link for Whimsy

--- a/netbeans.apache.org/src/content/community/committer.asciidoc
+++ b/netbeans.apache.org/src/content/community/committer.asciidoc
@@ -56,7 +56,7 @@ The process is similar to other Apache projects, such as link:https://github.com
 . Send invitation to the committer, to invite them to be a committer. Example invitations: link:https://cwiki.apache.org/confluence/display/FLEX/New+committer+or+PMC+member+invitation[from the FLEX project],
 or link:http://apache-wicket.1842946.n4.nabble.com/Re-Invitation-to-become-Wicket-committer-Andrea-del-Bene-td4660253.html[Apache Wicket].
 . An account needs to be created for the new committer, if they accept the invitation that was sent.
-. Once created, the new user can then be added as a committer at link:https://whimsy.apache.org/roster/ppmc/netbeans
+. Once created, the new user can then be added as a committer at link:https://whimsy.apache.org/roster/ppmc/netbeans[whimsy.apache.org]
 . In parallel, send the *[NOTICE]* to Incubator PMC and wait 72 hours. (Example text etc to come.)
 . Then add the PPMC member at link:https://whimsy.apache.org/roster/ppmc/netbeans[whimsy.apache.org] and optionally announce on the dev list (Example text to come).
 
