Restoring original /community/events.html
The ASF podling website checks does not require chaning our page, just
adding a link to the ASF current event page.

--- a/netbeans.apache.org/src/content/community/index.asciidoc
+++ b/netbeans.apache.org/src/content/community/index.asciidoc
@@ -31,8 +31,8 @@ The Apache NetBeans Community link:mailing-lists.html[communicates in many diffe
 == link:/participate/index.html[Participate]
 We welcome link:/participate/index.html[all kind of contributions]. And there are many ways to contribute: see how you can participate in Apache NetBeans.
 
-== link:/events/index.html[NetBeans Events]
-NetBeans users and developers participate in link:/events/index.html[different events]. See how this works.
+== link:events.html[NetBeans Events]
+NetBeans users and developers participate in link:events.html[different events]. See how this works.
 
 == link:who.html[Who We Are]
 The Apache NetBeans source code was donated by Oracle to the link:https://www.apache.org[Apache Software Foundation] in 2016.
