NetBeans 9.0 RC1 Announcement

--- a/netbeans.apache.org/src/content/download/nb90/nb90-rc1.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90-rc1.asciidoc
@@ -50,11 +50,9 @@ Apache NetBeans 9.0 RC1 is available for download from your closest Apache mirro
 
 - Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-rc1-source.zip[incubating-netbeans-java-9.0-rc1-source.zip] (
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-rc1-source.zip.asc[PGP ASC], 
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-rc1-source.zip.md5[MD5], 
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-rc1-source.zip.sha1[SHA-1])
 - Binaries: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-rc1-bin.zip[incubating-netbeans-java-9.0-rc1-bin.zip] ( 
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-rc1-bin.zip.asc[PGP ASC],
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-rc1-bin.zip.md5[MD5],
 link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/incubating-9.0-rc1/incubating-netbeans-java-9.0-rc1-bin.zip.sha1[SHA-1])
 
 ////
@@ -70,8 +68,12 @@ The sources for this release have been tagged as link:https://github.com/apache/
 
 As in any other Apache Project, the Apache NetBeans Community approved this release through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
 
-- link:https://lists.apache.org/thread.html/c2a06adc83e2819e6d96c7dff8d0e22a97001f99bfda12515d4d9609@%3Cdev.netbeans.apache.org%3E[IPMC vote on RC1]
-- link:https://lists.apache.org/thread.html/94f7a5e4601e26c7edb8264df7df53dd8ed215ecfc568816a162f2af@%3Cdev.netbeans.apache.org%3E[IPMC vote result on RC1]
+- link:https://lists.apache.org/thread.html/c2a06adc83e2819e6d96c7dff8d0e22a97001f99bfda12515d4d9609@%3Cdev.netbeans.apache.org%3E[PPMC vote]
+- link:https://lists.apache.org/thread.html/94f7a5e4601e26c7edb8264df7df53dd8ed215ecfc568816a162f2af@%3Cdev.netbeans.apache.org%3E[PPMC vote result]
+- link:https://lists.apache.org/thread.html/13af566fb266308d0a91c3e860d22fb1766464df9fe94126d74084fb@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
+- link:https://lists.apache.org/thread.html/8f15a994bc613c7c0915063c6b8cfde7d584c425f8566cd93d20fe57@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
+- link:https://lists.apache.org/thread.html/1eb3e248e4f4f980ee21d4d3d103ed7ce17020e62489ba4be89e0a9a@%3Cgeneral.incubator.apache.org%3E[IPMC announce]
 
-- link:https://lists.apache.org/thread.html/c2a06adc83e2819e6d96c7dff8d0e22a97001f99bfda12515d4d9609@%3Cdev.netbeans.apache.org%3E[PPMC vote on RC1]
+=== Known issues
 
+Please visit link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+9.0+RC1[this confluence page] for a list of known issues.
