Changed page title to Apache NetBeans 9.0 RC1, removes .md5 mention

--- a/netbeans.apache.org/src/content/download/nb90/nb90-rc1.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/nb90-rc1.asciidoc
@@ -23,7 +23,7 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Apache NetBeans 9.0 Beta / Apache NetBeans
+= Apache NetBeans 9.0 RC1 / Apache NetBeans
 :jbake-type: page
 :jbake-tags: download
 :jbake-status: published
@@ -58,7 +58,7 @@ link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-java/inc
 ////
 NOTE: Using https below is highly recommended.
 ////
-It is essential that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.md5 or .sha1 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here]. 
+It is essential that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha1 files).  The PGP keys used to sign this release are available link:https://dist.apache.org/repos/dist/release/incubator/netbeans/KEYS[here].
 
 === Building from source
 
