--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -34,7 +34,7 @@ Apache NetBeans 9.0 is the first release of the Apache NetBeans IDE.
 The main goals for this release are
 
 - IP clearance of the Oracle code donation.
-- Java 9 Support.
+- Java 9 and 10 Support.
 
 === Downloads
 
@@ -42,8 +42,6 @@ The main goals for this release are
 - See link:/download/nb90/nb90-beta.html[Apache NetBeans 9.0 Beta], released on february, 2018.
 
 === Features
-
-NOTE: This is a list of the *proposed* features of Apache NetBeans 9.0. The beta release may provide a *subset* of these.
 
 ////
 To display a feature do as follows:
