--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -77,16 +77,16 @@ And even some more
 Note: When rendered into HTML, the images will automatically be wrapped around 'colorbox', so that they're enlarged when clicked.
 
 ////
-==== Supporting JPMS (Jigsaw) to full extent
+==== Supporting JPMS (Jigsaw)
 [.feature]
 --
 image:nb90-module-info.png[Adding module-info.java, title="Adding module-info.java", role="left", link="nb90-module-info.png"]
 
-NetBeans 9 supports link:http://openjdk.java.net/projects/jigsaw/spec/[JPMS (Jigsaw)] to full extent. 
+NetBeans 9 supports link:http://openjdk.java.net/projects/jigsaw/spec/[JPMS (Jigsaw)]. 
 
-Modulepath was added as a crucial paradigm to NetBeans in addition to Classpath.
+Modulepath was added as a paradigm to NetBeans in addition to Classpath.
 
-The standard NetBeans Java SE Project Type (Ant based) can be a single JDK9 module simply by adding a `module-info.java` file into the default package.
+The standard NetBeans Java SE Project Type (Ant based) can be a single JDK 9 module simply by adding a `module-info.java` file into the default package.
 --
 
 [.feature]
