--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -77,7 +77,7 @@ And even some more
 Note: When rendered into HTML, the images will automatically be wrapped around 'colorbox', so that they're enlarged when clicked.
 
 ////
-==== Supporting JPMS (Jigsaw)
+==== Supporting the Jigsaw Module System
 [.feature]
 --
 image:nb90-module-info.png[Adding module-info.java, title="Adding module-info.java", role="left", link="nb90-module-info.png"]
