--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -77,6 +77,11 @@ And even some more
 Note: When rendered into HTML, the images will automatically be wrapped around 'colorbox', so that they're enlarged when clicked.
 
 ////
+==== Supporting Local Variable Type Inference
+
+Hints and refactorings for transforming to/from the new JDK 10 "var" type.
+
+////
 ==== Supporting the Jigsaw Module System
 [.feature]
 --
