--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -38,8 +38,8 @@ The main goals for this release are
 
 === Downloads
 
-- See link:/download/nb90/nb90-rc1.html[Apache NetBeans 9.0 RC1], released on may, 2018.
-- See link:/download/nb90/nb90-beta.html[Apache NetBeans 9.0 Beta], released on february, 2018.
+- See link:/download/nb90/nb90-rc1.html[Apache NetBeans 9.0 RC1], released in May 2018.
+- See link:/download/nb90/nb90-beta.html[Apache NetBeans 9.0 Beta], released in February 2018.
 
 === Features
 
