--- a/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
+++ b/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
@@ -40,7 +40,7 @@ the email addresses below, substituting `subscribe@` with `digest-subscribe@` an
 === Users list
 
 Use this list to ask questions about the usage of the NetBeans IDE, whether
-for Java, JavaScript, C/C++, or any other language or technology.
+for Java, JavaScript, C/C++, or any other language or technology, whether as user of NetBeans IDE or developer on top of the NetBeans Platform.
 
 This list is also useful as well for those using the NetBeans APIs to develop modules and applications.
 
