Updating thilina01 personal information
As per his request.

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -474,9 +474,11 @@ Committer
   - Platform, JavaFX, JavaEE, Groovy, Gradle, XML 
 
 === Thilina Ranathunga
-  - Nano Creations / ESOFT Metro Campus, Ekala, Sri Lanka 
+  - Nano Creations, Ekala, Sri Lanka 
   - RCP, API, EE, Spring, Angular, TypeScript 
-  -  LinkedIn github 
+  -  http://thilina01.com/
+  -  https://www.linkedin.com/in/thilina-ranathunga-35bb2864/
+  -  https://github.com/thilina01
 
 === Thomas Kruse
   - apache id: everflux 
