--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -82,6 +82,11 @@ Note: When rendered into HTML, the images will automatically be wrapped around '
 
 Hints and refactorings for transforming to/from the new JDK 10 "var" type.
 
+- New Hint to convert explicit variable type to 'var'.
+- New Hint to Convert var type back to explicit type.
+- New Error hint to split compound 'var' declaration.
+- New Error Hint for var Array declaration.
+
 ==== Supporting the Jigsaw Module System
 [.feature]
 --
