--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -83,13 +83,13 @@ Note: When rendered into HTML, the images will automatically be wrapped around '
 Hints and refactorings for transforming to/from the new JDK 10 "var" type.
 
 - New Hint to convert explicit variable type to 'var'.
-image:image2018-5-30_12-38-55.png[New Hint to convert explicit variable type to 'var', title="New Hint to convert explicit variable type to 'var'", role="right", link="image2018-5-30_12-38-55.png"]
+image:image2018-5-30_12-38-55.png[New Hint to convert explicit variable type to 'var', title="New Hint to convert explicit variable type to 'var'", role="left", link="image2018-5-30_12-38-55.png"]
 - New Hint to Convert var type back to explicit type.
-image:image2018-5-30_12-45-4.png[New Hint to Convert var type back to explicit type, title="New Hint to Convert var type back to explicit type", role="right", link="image2018-5-30_12-45-4.png"]
+image:image2018-5-30_12-45-4.png[New Hint to Convert var type back to explicit type, title="New Hint to Convert var type back to explicit type", role="left", link="image2018-5-30_12-45-4.png"]
 - New Error hint to split compound 'var' declaration.
-image:image2018-5-30_13-34-39.png[New Error hint to split compound 'var' declaration, title="New Error hint to split compound 'var' declaration", role="right", link="image2018-5-30_13-34-39.png"]
+image:image2018-5-30_13-34-39.png[New Error hint to split compound 'var' declaration, title="New Error hint to split compound 'var' declaration", role="left", link="image2018-5-30_13-34-39.png"]
 - New Error Hint for var Array declaration.
-image:invalidArray.png[New Error Hint for var Array declaration, title="New Error Hint for var Array declaration", role="right", link="invalidArray.png"]
+image:invalidArray.png[New Error Hint for var Array declaration, title="New Error Hint for var Array declaration", role="left", link="invalidArray.png"]
 
 ==== Supporting the Jigsaw Module System
 [.feature]
