--- a/netbeans.apache.org/src/content/download/nb90/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb90/index.asciidoc
@@ -92,9 +92,13 @@ image:image2018-5-30_12-45-4.png[New Hint to Convert var type back to explicit t
 
 - New Error hint to split compound 'var' declaration.
 
+Var is not supported in a compound variable declaration. This fix helps correct compilation error by splitting declaration into separate statements. 
+
 image:image2018-5-30_13-34-39.png[New Error hint to split compound 'var' declaration, title="New Error hint to split compound 'var' declaration", role="left", link="image2018-5-30_13-34-39.png"]
 
 - New Error Hint for var Array declaration.
+
+Var type is not supported for array initializer. This hint helps correct compilation errors by converting to explicit type by inferring the type of data in an array. This currently handles arrays of primitive or homogeneous types.
 
 image:invalidArray.png[New Error Hint for var Array declaration, title="New Error Hint for var Array declaration", role="left", link="invalidArray.png"]
 
