--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -61,6 +61,8 @@ Once you're all set just enter the `incubator-netbeans` directory and type:
   ** Once built, the IDE bits are placed in the `./nbbuild/netbeans` directory. You can run the IDE from within the `incubator-netbeans` directory by typing `./nbbuild/netbeans/bin/netbeans` on unixes (for Windows the command is equivalent).
 - `ant tryme` to run the Apache NetBeans IDE.
 
+For details, go here: https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment
+
 Now that you have built Apache NetBeans from source you may want to link:/participate/submit-pr.html[submit a pull request].
 
 [[repos]]
