Geertjan videos on getting started with the Platform (#60)
Let's allow the community to enjoy these videos!

--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -32,6 +32,7 @@ NOTE: Documentation is being transferred from Oracle to Apache NetBeans.
 
 The following resources are available:
 
+- Short videos on how to link:getting-started.html[get started with the Apache NetBeans Platform] to build Java Desktop Applications.
 - Visit the link:https://netbeans.org/kb/index.html[netbeans.org docs & support] section in the old website.
 - Our link:https://www.youtube.com/user/NetBeansVideos[YouTube Video Channel] contains many tutorials and tips.
 - The previous link:/wiki/index.asciidoc[wiki] has been partially migrated and is being updated.
