--- a/netbeans.apache.org/src/content/help/getting-started.asciidoc
+++ b/netbeans.apache.org/src/content/help/getting-started.asciidoc
@@ -54,7 +54,7 @@ A quick tip for running and debugging Apache NetBeans IDE.
 
 video::a1F2FkhZfQM[youtube]
 
-=== Part IV: : Edit and Run Apache NetBeans IDE
+=== Part IV: Edit and Run Apache NetBeans IDE
 
 How do you make changes to the source code and then see them live in Apache NetBeans IDE?
 
