Add links to tutorial videos to Participate section (#61)

--- a/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
@@ -59,6 +59,9 @@ We appreciate new contributors to adhere to the following guidelines, to make th
 . Follow the coding conventions of the file. Your code should match that style and not stand out. For new files, please follow the link:https://netbeans.org/community/guidelines/code-conventions.html[code conventions for the NetBeans code base].
 . Try to keep the code *readable, maintainable, easy to debug* and *performant*.
 
+== Learn to run and debug NetBeans IDE or Platform applications
+link:/participate/build-run-debug-tutorials.html[Watch a series of 5 short videos] (2 minutes on average) showing how to build, run and debug the NetBeans IDE or any NetBeans platform application from sources. 
+
 == Contributing to Apache NetBeans in github
 
 === Boostraping (do this once)
